# Python-Playground

./: .env.dev.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: metaclass_example.py
tests/unit/: test_metaclass_example.py  test_sample.py  test_typing.py
tests/unit/data_types/: TODO.md  test_boolean.py  test_byte_arrays.py  test_bytes.py  test_complex_numbers.py  test_dictionaries.py  test_enums.py  test_floats.py  test_frozensets.py  test_generators.py  test_integers.py  test_lists.py  test_memory_view.py  test_none_type.py  test_range.py  test_sets.py  test_string.py  test_tuples.py
tests/unit/neetcode/arrays_and_hashing/: contains_duplicate.py  is_anagram.py  two_sum.py
